@@ -1349,12 +1349,12 @@ function visual_map_get_user_layouts ($id_user = 0, $only_names = false, $filter
 		$filter = array ();
 	
 	$where = db_format_array_where_clause_sql ($filter);
-
+	
 	if ($returnAllGroup)
 		$groups = users_get_groups ($id_user);
 	else
 		$groups = users_get_groups ($id_user, 'IR', true);
-
+	
 	if(!empty($groups)) {
 		if ($where != '') {
 			$where .= ' AND ';
@@ -1365,12 +1365,12 @@ function visual_map_get_user_layouts ($id_user = 0, $only_names = false, $filter
 	if($where == '') {
 		$where = array();
 	}
-
+	
 	$layouts = db_get_all_rows_filter ('tlayout', $where);
 	
 	if ($layouts == false)
 		return array ();
-
+	
 	$retval = array ();
 	foreach ($layouts as $layout) {
 		if ($only_names)
@@ -1399,12 +1399,12 @@ function visual_map_get_layout_status ($id_layout = 0, $depth = 0) {
 	$temp_status = 0;
 	$temp_total = 0;
 	$depth++; // For recursion depth checking
-
+	
 	// TODO: Implement this limit as a configurable item in setup
-	if ($depth > 10){
+	if ($depth > 10) {
 		return 3; // No status data if we need to exit by a excesive recursion
 	}
-
+	
 	$id_layout = (int) $id_layout;
 	
 	$result = db_get_all_rows_filter ('tlayout_data', array ('id_layout' => $id_layout),
@@ -1418,11 +1418,14 @@ function visual_map_get_layout_status ($id_layout = 0, $depth = 0) {
 		// Other Layout (Recursive!)
 		if (($data["id_layout_linked"] != 0) && ($data["id_agente_modulo"] == 0)) {
 			$status = visual_map_get_layout_status ($data["id_layout_linked"], $depth);
+		}
 		// Module
-		} elseif ($data["id_agente_modulo"] != 0) {
+		elseif ($data["id_agente_modulo"] != 0) {
 			$status = modules_get_agentmodule_status ($data["id_agente_modulo"]);
+		
+		}
 		// Agent
-		} else {
+		else {
 			$status = agents_get_status ($data["id_agent"]);
 		}
 		if ($status == 1)
@@ -1489,7 +1492,7 @@ function visual_map_create_internal_name_item($label = null, $type, $image, $age
 			if (!empty($moduleName)) {
 				$text .= " - " . ui_print_truncate_text($moduleName, 10, false);
 			}
-
+			
 			$text .= ")"; 
 		}
 		$text .= ' (' . $idData . ')'; 
